--- a/src/component/Component/Component.css
+++ b/src/component/Component/Component.css
@@ -42,3 +42,19 @@
     font-size: 16px;
     font-weight: 500;
 }
+
+@media (max-width: 545px) {
+    .component-title h3 {
+        font-size: 30px;
+        line-height: 35px;
+    }
+    .component-img img{
+        width: 100%;
+    }
+    .component-title {
+        border-left: none;
+    }
+    .second-descript {
+        border: none;
+    }
+}
