--- a/src/layout/Footer.css
+++ b/src/layout/Footer.css
@@ -146,6 +146,12 @@
         justify-content: space-between;
     }
 
+    .footer-menu-item-wraper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
     .footer-info-wraper {
         flex-direction: row;
         flex-wrap: nowrap;
